--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	        rel="stylesheet"
 	        href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
 	    />
-		<script async defer src="script.js"></script>
+		<script async defer src="script.js?v=1"></script>
 	    <title>Arqitek Homepage</title>
 	</head>
 	<body>
