--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 	<head>
 	    <style>
 	        .container {
-	            position: relative;
-	            display: flex;
-	            align-items: center;
-	            justify-content: center;
-	            height: 79vh;
-	        }
+    			position: relative;
+    			display: flex;
+    			align-items: center;
+    			justify-content: space-evenly; /* Uniform spacing between buttons and container edges */
+    			height: 79vh;
+			}
+
 			.title{
 				position: relative;
 	            display: flex;
@@ -54,7 +55,9 @@
 				<path style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(199,68,64); fill-rule: nonzero; opacity: 1;" vector-effect="non-scaling-stroke"  paint-order="stroke"  transform=" translate(-197.1, -190.4)" d="M 117.09955089820363 160.39764221556885 L 197.09955089820363 220.39764221556885 L 277.09955089820363 160.39764221556885 L 197.09955089820363 200.39764221556885 L 117.09955089820363 160.39764221556885 L 117.09955089820363 160.39764221556885 L 117.09955089820363 160.39764221556885" stroke-linecap="round" />
 				</g>
 			</svg>
+			<button type="button" id="discord">Discord server</button>
 	        <button type="button" id="downloadBtn">Get the game</button>
-	    </div>
+			<button type="button" id="code">Source Code</button>
+		</div>
 	</body>
 </html>
