--- a/index.html
+++ b/index.html
@@ -1,86 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-        .container {
-            position: relative;
-            display: flex;
-            align-items: center;
-            justify-content: space-evenly; /* Uniform spacing between buttons and container edges */
-            height: 79vh;
-        }
-
-        .title {
-            position: relative;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 10vh;
-            color: #fff;
-            padding-bottom: 0px;
-            margin-bottom: 0px;
-            border-bottom: 0px solid var(--nc-bg-2);
-        }
-
-        svg {
-            position: absolute;
-            width: 50%; /* Adjust the size as needed */
-            height: auto;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 0; /* Ensures the SVG is behind the button */
-        }
-
-        button {
-            padding: 10px;
-            font-size: 16px;
-            z-index: 1; /* Ensures the button is above the SVG */
-            background: rgba(255, 255, 255, 0.8); /* Optional: Add a slight background to the button */
-        }
-
-        /* Add a fixed position text block at the top */
-		.top-text {
-		    position: fixed;
-		    top: 0;
-		    left: 0;
-		    width: 100%;
-		    background-color: rgba(0, 0, 0);
-		    color: white;
-		    padding: 1px;
-		    font-size: small;
-		    text-align: center;
-		    z-index: 1000;
-		    display: flex; /* Enable Flexbox */
-		    align-items: center; /* Center vertically */
-		    justify-content: center; /* Center horizontally */
-		    height: 5vh; /* Adjust height if needed */
-		}
-
-		.bottom-text {
-		    position: fixed;
-		    top: 97vh;
-		    left: 0;
-		    width: 100%;
-		    height: 3vh;
-		    background-color: rgb(0, 0, 0);
-		    color: white;
-		    padding: 1px;
-		    font-size: small;
-		    text-align: center;
-		    z-index: 1000;
-		    display: flex; /* Enable Flexbox */
-		    align-items: center; /* Center vertically */
-		    justify-content: center; /* Center horizontally */
-		}
-
-    </style>
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
-    />
+	<link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"/>
+	<link rel="icon" type="image/svg+xml" href="SeanTek.svg">
     <script async defer src="script.js?v=1"></script>
     <title>Arqitek Homepage</title>
 </head>
@@ -91,11 +17,9 @@
     <h1 class="title">PROJECT BADBOT</h1>
 
     <div class="container">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="1080" height="1080" viewBox="0 0 1080 1080" xml:space="preserve">
-            <g transform="matrix(6.6 0 0 6.6 540 540)">
-                <path style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(199,68,64); fill-rule: nonzero; opacity: 1;" vector-effect="non-scaling-stroke"  paint-order="stroke"  transform=" translate(-197.1, -190.4)" d="M 117.09955089820363 160.39764221556885 L 197.09955089820363 220.39764221556885 L 277.09955089820363 160.39764221556885 L 197.09955089820363 200.39764221556885 L 117.09955089820363 160.39764221556885 L 117.09955089820363 160.39764221556885 L 117.09955089820363 160.39764221556885" stroke-linecap="round" />
-            </g>
-        </svg>
+		<object type="image/svg+xml" data="SeanTek.svg" class="seantek">
+			Your browser sucks, fuck you
+		</object>
         <button type="button" id="discord">Discord server</button>
         <button type="button" id="downloadBtn">Get the game</button>
         <button type="button" id="code">Source Code</button>
