force dark mode

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="style.css"/>
@@ -10,7 +9,7 @@
     <script async defer src="script.js?v=1"></script>
     <title>Arqitek Homepage</title>
 </head>
-<body>
+<body class="dbody">
     <!-- Fixed text block at the top -->
     <div class="top-text">This is an unfinished product. Everything is subject to change</div>
 	<div class="bottom-text">Made by Arqitek</div>
