--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
 	<div class="bottom-text">Made by Arqitek</div>
     <h1 class="title">PROJECT BADBOT</h1>
 
-    <div class="container">
+    <div class="outcontainer">
 		<object type="image/svg+xml" data="SeanTek.svg" class="seantek">
 			Your browser sucks, fuck you
 		</object>
-        <button type="button" id="discord">Discord server</button>
-        <button type="button" id="downloadBtn">Get the game</button>
-        <button type="button" id="code">Source Code</button>
-    </div>
+		<div class="incontainer">
+			<button type="button" id="discord">Discord server</button>
+			<button type="button" id="downloadBtn">Get the game</button>
+			<button type="button" id="code">Source Code</button>
+			<div class="break"></div>
+			<button type="button" id="fdev">Follow the Development</button>
+		</div>
+	</div>
+	
 </body>
 </html>
