--- a/index.html
+++ b/index.html
@@ -5,28 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"/>
-	<link rel="icon" type="image/svg+xml" href="SeanTek.svg">
-    <script async defer src="script.js?v=1"></script>
+	<script	defer src="firstImpression.js?v=1"></script>
+    <script defer src="script.js?v=1"></script>
     <title>Arqitek Homepage</title>
 </head>
-<body class="dbody">
-    <!-- Fixed text block at the top -->
-    <div class="top-text">This is an unfinished product. Everything is subject to change</div>
-	<div class="bottom-text">Made by Arqitek</div>
-    <h1 class="title">PROJECT BADBOT</h1>
-
-    <div class="outcontainer">
-		<object type="image/svg+xml" data="SeanTek.svg" class="seantek">
-			Your browser sucks, fuck you
-		</object>
-		<div class="incontainer">
-			<button type="button" id="discord">Discord server</button>
-			<button type="button" id="downloadBtn">Get the game</button>
-			<button type="button" id="code">Source Code</button>
-			<div class="break"></div>
-			<button type="button" id="fdev">Follow the Development</button>
-		</div>
+<body>
+	<p class="centered"><img src="favicon.ico"></p>
+	<h1 class="title centered" id="welcome">Welcome</h1>
+	<div class="about centered">
+		<p>Arqitek is (for now) a game studio made by Starman.</p>
+		<p>Although we haven't published a game yet we have many planned.</p>
+		<p>For now we have Project Raymaker and Project BadBot (names subject to change)</p>
 	</div>
-	
+	<div class="games centered">
+		<button type="button" id="pbb">Project BadBot</button>
+	</div>
 </body>
-</html>
