changed discord server button to a better place

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"/>
+	<link rel="stylesheet" href="style.css"/>
 	<script	defer src="firstImpression.js?v=1"></script>
     <script defer src="script.js?v=1"></script>
     <title>Arqitek Homepage</title>
@@ -17,6 +17,12 @@
 		<p>Although we haven't published a game yet we have many planned.</p>
 		<p>For now we have Project Raymaker and Project BadBot (names subject to change)</p>
 	</div>
+	<p class="centered">
+		<button type="button" id="discord">Discord server</button>
+	</p>
+	<h3 class="centered">
+		Our Games
+	</h3>
 	<div class="games centered">
 		<button type="button" id="pbb">Project BadBot</button>
 	</div>
