--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	</div>
 	<p class="centered">
 		<button type="button" id="discord">Discord server</button>
+		<button type="button" id="launcher">Launcher</button>
 	</p>
 	<h3 class="centered">
 		Our Games
