removed pbb stuff, page still accessible

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<div class="about centered">
 		<p>Arqitek is (for now) a game studio made by Starman.</p>
 		<p>Although we haven't published a game yet we have many planned.</p>
-		<p>For now we have Project Raymaker and Project BadBot (names subject to change)</p>
+		<p>For now we only have Project Ethanol (name subject to change)</p>
 	</div>
 	<p class="centered">
 		<button type="button" id="discord">Discord server</button>
@@ -35,6 +35,6 @@
 		Our Games
 	</h3>
 	<div class="games centered">
-		<button type="button" id="pbb">Project BadBot</button>
+	  <button class="button" id="peth">Project Ethanol</button>
 	</div>
 </body>
