--- a/peth/index.html
+++ b/peth/index.html
@@ -21,19 +21,14 @@
     <title>Project BadBot</title>
 </head>
 <body class="dbody">
-    <!-- Fixed text block at the top -->
-    <div class="top-text">This project is cancelled and won't be developed further</div>
 	<div class="bottom-text">Made by Arqitek</div>
-    <h1 class="title">PROJECT BADBOT</h1>
+    <h1 class="title">PROJECT ETHANOL</h1>
 
     <div class="outcontainer">
 		<object type="image/svg+xml" data="SeanTek.svg" class="seantek">
 			Your browser sucks, fuck you
 		</object>
 		<div class="incontainer">
-			<button type="button" id="downloadBtn">Get the game</button>
-			<button type="button" id="code">Source Code</button>
-			<div class="break"></div>
 			<button type="button" id="fdev">Follow the Development</button>
 		</div>
 	</div>
