--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Arqitek Homepage</title>
 </head>
 <body>
-	<p class="centered"><img src="favicon.ico"></p>
+	<p class="centered" style="width: 25%;"><img src="favicon.ico"></p>
 	<h1 class="title centered" id="welcome">Welcome</h1>
 	<div class="about centered">
 		<p>Arqitek is (for now) a game studio made by Starman.</p>
@@ -36,5 +36,13 @@
 	</h3>
 	<div class="games centered">
 	  <button class="button" id="peth">Project Ethanol</button>
+	</div>
+	<h3 class="centered">
+		Our Tools
+	</h3>
+	<div class="games centered">
+	  <button class="button" id="nets">NetShaderc</button>
+	  <button class="button" id="alk">Alkata</button>
+	  <button class="button" id="arq">Arqeta</button>
 	</div>
 </body>
